# Laplacian

./: .gitmodules  LICENSE  README.md  meson.build
include/: Laplacian.h  Laplacian2.h  Laplacian2f.h  Laplacian2s.h  Laplacian4f.h  Laplacian4s.h  LaplacianFourthOrder.h  LaplacianFourthOrderISPC.ispc  LaplacianSecondOrder.h  LaplacianSecondOrderISPC.h  LaplacianSecondOrderISPC.ispc  OVS.h  meson.build  ringBuff.h  sliceFourthOrder.ispc  sliceSecondOrder.ispc
include/BC/: Neumann.h
include/kernels/: LaplacianFourthOrder.h  LaplacianSecondOrder.h  ringBuff.h  sliceFourthOrder.h  sliceFourthOrder.ispc  sliceSecondOrder.h  sliceSecondOrder.ispc
src/: Laplacian.cpp  main.cpp  meson.build  plot.py
subprojects/: .gitignore  CubismNova.wrap  gtest.wrap  inih.wrap
test/: ConvergenceRateTest.cpp  TestLaplacian.cpp  meson.build  plot.py
test/BC/: $  NeumannTest.cpp  meson.build
test/benchmarking/: benchmarking.cpp  meson.build  plot.py  plot_roof.py
test/codeVerification/: codeVerification.cpp  meson.build  plot.py
