# executable for non-MPI files
executable('main', 
  files('main.cpp'),
  dependencies: cubismnova_dep,
  include_directories: inc, 
  install: false, 
)

# executable for MPI files
#executable('main-mpi', 
#  files('main_mpi.cpp'), 
#  dependencies: [cubismnova_dep, mpi_dep],
#  install: false, 
#)
